# embedded-lab

./: .gitignore  AGENTS.md  API_CONTRACT.md  ARCHITECTURE.md  CONTENT_SCHEMA.md  DATA_MODEL.md  README.md  opencode.jsonc
apps/api/: .env.example  embedded_lab_dev.db  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/modules/ai_evaluation/: router.py
apps/api/app/modules/attempts/: router.py
apps/api/app/modules/attempts/models/: __init__.py  exercise_attempt.py  lab_attempt_session.py
apps/api/app/modules/attempts/schemas/: __init__.py  lab_attempt.py
apps/api/app/modules/auth/: dependencies.py  router.py  security.py
apps/api/app/modules/evaluation/: router.py
apps/api/app/modules/lab_progress/: __init__.py  router.py
apps/api/app/modules/labs/: router.py
apps/api/app/modules/paths/: modules_router.py  router.py
apps/api/app/modules/scoring/: router.py
apps/api/app/modules/users/: router.py
apps/api/app/shared/config/: settings.py
apps/api/app/shared/db/: models.py  session.py
apps/api/embedded_lab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/modules/attempts/: test_attempts_api.py  test_phase2_models.py
apps/api/tests/modules/auth/: test_password_security.py  test_register_api.py
apps/api/tests/modules/lab_progress/: test_lab_progress_api.py
apps/api/tests/modules/labs/: test_labs_api.py
apps/api/tests/modules/paths/: test_path_progress_api.py  test_path_seed_service.py  test_paths_api.py
apps/api/tests/modules/users/: test_me_api.py
apps/web/: next.config.mjs  (+2 more)
(+53 files in other folders)
